fix layout on iphone

--- a/src/Antix.EASI.Web/client/examinations/examinations.less
+++ b/src/Antix.EASI.Web/client/examinations/examinations.less
@@ -6,7 +6,6 @@
 .examinations-list {
     margin-left: -20px;
     margin-right: -20px;
-
 }
 
 .examination-row {
@@ -96,10 +95,15 @@
 
     .examination-eric {
         position: absolute;
-        width: 65px;
+        width: 64px;
+        height: 96px;
     }
 
     .examinations-list-item-details {
         padding-left: 100px;
+        
+        label {
+            display: block;
+        }
     }
 }
